--- a/public/hongirana.html
+++ b/public/hongirana.html
@@ -1,5 +1,8 @@
 <html>
-  <head><title>Be at Hongirana on 30 Apr, 2025</title></head>
+  <head>
+    <title>Be at Hongirana on 30 Apr, 2025</title>
+     <meta http-equiv="Refresh" content="0; URL=https://maps.app.goo.gl/FxRxzHGriaahq5hd9" />
+  </head>
   <body>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d972.383902040655!2d77.55328721762221!3d12.873243385067084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae40070c5da083%3A0x82e8127eca831d54!2s436%2C%207th%20Main%20Rd%2C%20Narayana%20Nagar%202nd%20Block%2C%20Narayana%20Nagar%201st%20Block%2C%20Bangalore%20City%20Municipal%20Corporation%20Layout%2C%20Bengaluru%2C%20Thippasandra%2C%20Karnataka%20560062!5e0!3m2!1sen!2sin!4v1744517992614!5m2!1sen!2sin" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </body>
